kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: service1
            port:
              number: 8080
      - path: /service2
        pathType: Prefix
        backend:
          service:
            name: service2
            port:
              number: 8080
